--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@ a{
 .needHover:hover{
   cursor: pointer;
 }
+
+.redCircle{
+  width: 5px;
+  height: 5px;
+  border-radius: 3px;
+  background-color: red;
+
+}
+
 .card {
   transform-style: preserve-3d;
   min-height: 80vh;
@@ -15,6 +24,22 @@ a{
   padding: 0rem 5rem;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
 }
+
+.w100{
+  width: 100%;
+  padding:5px !important;
+}
+
+.viewUsers{
+  width: 80%;
+}
+
+
+.MuiBox-root-14{
+  padding:5px !important;
+}
+
+
 .marg{
   margin-top: 200px !important;
   margin:50px !important;
